--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -1,4 +1,106 @@
-// @import "_variables";
+@import "_variables";
+
+$error: rgb(255, 167, 94);
+
+form {
+  p {
+    margin-top: 2.5rem;
+    margin-left: 0;
+  }
+  .error {
+    color: $error;
+  }
+}
+
+/* relative position to move span elements */
+/* block display to encapsulate contents correctly */
+label {
+  position: relative;
+  display: block;
+  height: fit-content;
+}
+
+/* span is effectively placeholder text, but transformable */
+label span {
+  position: absolute;
+  left: 0rem;
+  top: 0;
+  color: rgba(255, 255, 255, 0.569);
+  z-index: -1;
+  transition: 200ms;
+}
+
+/* visual indicator that user input is required */
+label span::after {
+  content: "...";
+}
+
+/* select all inputs that are NOT a 'submit' (button) type */
+input,
+textarea {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  border-bottom: solid 2px $green;
+  color: white;
+  width: 100%;
+  font-size: 1.5rem;
+  resize: none;
+}
+
+input.error,
+textarea.error {
+  border-bottom-color: $error;
+}
+
+/* a bottom margin appears in its usual display, same as img elements */
+textarea {
+  display: block;
+}
+
+/* push placeholder text to bottom of element */
+/* top property required as using 'bottom' won't allow it to transition */
+textarea ~ span {
+  top: 1.9rem;
+}
+
+/* move placeholder if selected or text has been added by user */
+input:focus ~ span,
+textarea:focus ~ span,
+input:not(:placeholder-shown) ~ span,
+textarea:not(:placeholder-shown) ~ span {
+  top: -1.5rem;
+  font-size: 70%;
+}
+
+/* style inputs when focused */
+input:focus,
+textarea:focus {
+  outline: none;
+  border-bottom: solid 2px $purple;
+}
+
+/* style the submit button */
+form button {
+  width: 100%;
+  padding: 0.8rem;
+  background-color: $purple;
+  border: none;
+  border-radius: 1rem;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 100ms;
+  &:disabled {
+    background-color: #333;
+  }
+}
+input[type="submit"]:hover {
+  opacity: 0.8;
+  letter-spacing: 1px;
+}
+input[type="submit"]:active {
+  transform: scale(0.99);
+}
 
 // .contact-form {
 //   box-sizing: border-box;
